--- a/public/css/home.css
+++ b/public/css/home.css
@@ -33,7 +33,7 @@ hr{
 /* akhir about */
 .contact{
     margin-top: 100px;
-    background-color: #05123f;
+    background-color: #081c64;
     color: white;
 }
 .contact_hr{
