--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,38 +1,3 @@
-.jumbotron {
-    background-image: url(/img/slider1.jpg);
-    background-size: cover;
-    height: 770px;
-    text-align: center;
-    margin-top: -120px;
-}
-
-.jumbotron .display-4 {
-    color: white;
-    margin-top: 200px;
-}
-
-.jumbotron p {
-    color: white;
-    font-size: 35px;
-}
-
-.jumbotron hr {
-    border-color: #F05F40;
-    width: 70px;
-    border-width: 3px;
-}
-
-.jumbotron .btn {
-    border: none;
-    background: #F05F40;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    margin-top: 40px;
-}
-
 th {
     text-align: center;
 }
@@ -72,4 +37,16 @@ th {
 
 .image-container:hover .middle {
     opacity: 1;
+}
+
+.preview-image {
+    width: 100px;
+    height: 150px;
+    object-fit: cover;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
